src/app/anime-list/anime-list.component.css
body {
    padding-top: 2vh;
    background-color: rgba(40, 43, 48, 0.5);
    padding-bottom: 2vh;
}

a {
    text-decoration: none;
    color: #e4e4e4;
}

.card-title {
    color: white;
    padding: 2px;
    border-radius: 5px;
}
.container {
    min-width: 80vw;
}
.container .card {
    padding: 0;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2vh;
}
.card {
    margin-top: 2vh;
    width: 15vw;
    background-color: rgba(40, 43, 48, 0.75);
    height: 45vh !important;
}

.card:hover {
    background-color: rgba(9, 124, 231, 0.75);
}
.card-img-top {
    height: 30vh !important;
    object-fit: cover;
    opacity: 0.6;
}
.col-sm-4 {
    margin-top: 2vh;
}

.page-link {
    background-color: #3e4042 !important;
    border-color: #a5a5a5 !important;
    color: white;
}

.page-link:hover {
    background-color: #097ce7 !important;
}

.current {
    color: #097ce7;
}
.current:hover {
    background-color: #3e4042 !important;
}

*:focus {
    border-color: inherit;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.product {
    margin-bottom: 30px;
}
.product-inner {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    padding: 10px;
}
.product img {
    margin-bottom: 10px;
}

#searchBlock {
    margin: auto;
    padding-top: 2vh;
    padding-bottom: 2vh;
    width: 75vw;
    background-color: rgba(40, 43, 48, 0.75);
    border-radius: 5px;
}

#searchBlock .input-group {
    margin: auto;
    width: 70vw;
}

#test {
    width: 40vw;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2vh;
}

#test .test {
    margin: auto;
}

.test button {
    min-width: 7.5vw !important;
    width: 7.5vw !important;
}

@media screen and (max-width: 1400px) {
    .card {
        width: 18vw;
    }
}

@media screen and (max-width: 1200px) {
    .card {
        width: 35vw;
    }
}

@media screen and (max-width: 992px) {
    .card {
        width: 35vw;
    }
}

@media screen and (max-width: 767px) {
    .container {
        padding: 0;
    }
    .card {
        margin: auto;
        margin-top: 4vh;
    }
    .card {
        width: 80vw;
    }
}

